added get user profile route
